used findbugs to clean up code.